# plaidml

./: .bazelignore  .bazelrc  .bazelrc.configure.swp  .clang-format  .editorconfig  .exclude  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .style.yapf  .travis.yml  BUILD  BUILD.bazel  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKSPACE  check.mlir  configure  environment-minimal-restrictive.yml  environment-windows.yml  environment.yml  install.sh  lit.cfg.py  lit.site.cfg.py.in  llvm_unified_diff.patch  logging.conf  remote  requirements.txt  test_inceptionv3.sh  test_model.sh  test_resnet.sh  test_sequence.sh  test_sequence_NCHW2.sh  test_sequence_stencil.sh  test_simple.sh  (+1 more)
cmake/packaging/: CMakeLists.txt
cmake/packaging_test_project/: CMakeLists.txt  edsl_tests.cc
devkit/: CMakeLists.txt  README.txt
plaidml/: BUILD  CMakeLists.txt  __init__.py  _edsl.py  config-bazel.cc  config-unix.cc  config-windows.cc  config.h  config.json  context.py  cpp_test.cc  dtype_vec_test.cc  dummy.cc  edsl.py  edsl_test.py  enumerate.py  exceptions.py  experimental.json  experimental.llvm.json  experimental.no_llvm.json  ffi.py  interact.py  libplaidml.lds  library.py  matmul_fuzz_test.cc  network_test.cc  not_setup.cfg  op.py  plaidml++.h  plaidml-config.cmake  plaidml.cc  plaidml.h  plaidml.in.def  plaidml.in.lds  plaidml.proto  plaidml_link.jsonnet  plaidml_setup.py  plaidml_test.cc  plaidml_test.py  requirements.txt  (+17 more)
plaidml/base/: BUILD  base.h  base_cpp.h  context.cc  context.h  feature.cc  feature_test.cc  logging.cc  perf_counter.cc  status.cc  status.h  status_strings.cc  status_strings.h  status_test.cc
plaidml/bridge/: CMakeLists.txt
plaidml/bridge/keras/: BUILD  CMakeLists.txt  __init__.py  backend_test.py  mnist_mlp.py  mnist_mlp_test.py  regression_test.py  setup.in.py  setup.py  trivial_model_test.py
plaidml/bridge/openvino/: BUILD  CMakeLists.txt  CPPLINT.cfg  builder.cpp  builder.hpp  ops.hpp  plaidml_builder.cpp  plaidml_builder.hpp  plaidml_ops.cpp  plaidml_ops.def  plaidml_ops.hpp  plaidml_program_builder.cpp  plaidml_program_builder.hpp  plaidml_util.cpp  plaidml_util.hpp  testenv.cpp  util.cpp  util.hpp
plaidml/bridge/pytorch/: BUILD  __init__.py  compiler.cc  compiler.h  logging.h  models_test.py  ops_test.py  register.cc  test_utils.py
plaidml/bridge/tf/: import_tf_to_mlir.py
plaidml/configs/: config.json  empty.json  experimental.json  macos.json  macos_experimental.json
plaidml/core/: BUILD  CMakeLists.txt  WIP_harness.py  __init__.py  _version.in.py  core.h  core_test.py  ffi.cc  ffi.h  internal.h  settings.cc  settings.h  settings.py  version.in.cc
plaidml/edsl/: BUILD  CMakeLists.txt  __init__.py  _ffi.py  autodiff.h  derivs.cc  edsl.cc  edsl.h  edsl_doc.cc  edsl_doc.py  edsl_docs.cc  edsl_docs.py  edsl_test.cc  edsl_test.py  ffi.cc  ffi.h  internal.h  tile.cc  tile.h  tile_test.cc
plaidml/edsl/examples/: BUILD  CMakeLists.txt  complex_conv_2d.cc  complex_conv_2d.py  conv_1d.cc  conv_1d.py  conv_2d_dilated.cc  conv_2d_dilated.py  example_tests.py  gemm.cc  gemm.py  gemv.cc  gemv.py  max_pool_1d.cc  max_pool_1d.py  quantize.cc  quantize.py
plaidml/edsl/tests/: BUILD  CMakeLists.txt  CPPLINT.cfg  __init__.py  edsl_error_test.cc  edsl_test-skip.intel_gen.txt  edsl_test-skip.intel_gen_ocl_spirv.txt  edsl_test-skip.intel_level_zero.txt  edsl_test.cc  edsl_test.py  lit.local.cfg
plaidml/event/: BUILD  buffer_diff.py  event.proto  events.py  filelog.py  requirements.txt
plaidml/exec/: BUILD  CMakeLists.txt  __init__.py  exec.h  ffi.cc  ffi.h
plaidml/keras/: BUILD  __init__.py  backend.py  backend_test.py  backend_test.txt  be_test_venv.txt  example_vgg.py  mnist_mlp_test.py  not_setup.cfg  regression_test.py  requirements.txt  setup.cfg  tf_test.py  tile_sandbox.py  trivial_model_test.py  tutorial_test.py
plaidml/op/: BUILD  CMakeLists.txt  __init__.py  ffi.cc  ffi.h  op.h  op_test.cc
plaidml/pytorch/: BUILD  __init__.py  compiler.cc  compiler.h  models_test.py  ops_test.py  register.cc  test_utils.py
plaidml/testdata/: resnet50.tpb  xception.tpb
pmlc/: BUILD  CMakeLists.txt  CPPLINT.cfg  all_dialects.cc  all_dialects.h  all_passes.h  lit.bzl  lit.cfg.py  lit.site.cfg.py  pmlc-opt.cc  pmlc-translate.cc  runlit.cfg.py  runlit.site.cfg.py  test.cc
pmlc/ast/: BUILD  CMakeLists.txt  ast.cc  ast.h  ast_ops.cc  ast_ops.h  builder.cc  builder.h  eval.cc  eval.h
pmlc/compiler/: BUILD  CMakeLists.txt  compiler.cc  compiler.h  executable.cc  executable.h  program.cc  program.h  registry.cc  registry.h  target.h
pmlc/conversion/: CMakeLists.txt
pmlc/dialect/: CMakeLists.txt
pmlc/rt/: BUILD  CMakeLists.txt  all_runtimes.cc  boundscheck.cc  builtin.cc  device.cc  device.h  device_id.cc  device_id.h  device_id_test.cc  executable.cc  executable.h  instrument.cc  instrument.h  internal.h  jit_executable.cc  jit_executable.h  memref.h  openmp.cc  plaidml_rt.jsonnet  prng.cc  register.cc  register.h  registry.h  runtime.cc  runtime.h  runtime_registry.cc  runtime_registry.h  symbol_registry.cc  symbol_registry.h  timed_executable.cc  timed_executable.h  xsmm.cc
pmlc/runtime/: BUILD  boundscheck.cc  builtin.cc  device_id.cc  device_id.h  device_id_test.cc  executable.cc  executable.h  internal.h  prng.cc  runtime.cc  runtime.h  runtime_registry.cc  runtime_registry.h  symbol_registry.cc  symbol_registry.h  xsmm.cc
pmlc/testing/: BUILD  CMakeLists.txt  gtest_main.cc
pmlc/tools/: CMakeLists.txt
pmlc/transforms/: BUILD  CMakeLists.txt  boxing.cc  hoisting.cc  make_entrypoints.cc  pass_detail.h  passes.h  passes.td
pmlc/util/: BUILD  CMakeLists.txt  all_dialects.h  all_passes.h  buffer.h  enums.cc  enums.h  enums.td  env.cc  env.h  extent.cc  extent.h  ident.cc  ident.h  ids.h  interfaces.cc  interfaces.h  interfaces.td  layout.cc  layout.h  logging.cc  logging.h  loop_with_epilog.cc  loop_with_epilog.h  loop_with_epilog.td  matchers.h  memuse.cc  memuse.h  schedule.cc  schedule.h  schedule.td  shape.cc  shape.h  slice.cc  slice.h  strides.cc  strides.h  tags.cc  tags.h  util.cc  (+1 more)
(+3495 files in other folders)
