[metadata]
description = PlaidML machine learning accelerator
long_description = PlaidML runs machine learning algorithms at ludicrous speed.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = Other/Proprietary
keywords = development ml
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development
	License :: Other/Proprietary License
  Programming Language :: Python :: 2.7

[options]
packages = plaidml
zip_safe = false
install_requires = numpy
