[metadata]
description = PlaidML machine learning accelerator
long_description = PlaidML is a framework for making machine learning work everywhere.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Software Development
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: POSIX :: Linux
  Programming Language :: C++
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5

[options]
packages = plaidml
zip_safe = false
install_requires = 
  enum34>=1.1.6
  numpy
  six

[bdist_wheel]
universal = 1

[options.package_data]
plaidml = *.so, *.dll, *.json, *LICENSE*

[options.entry_points]
console_scripts =
  plaidml-setup = plaidml.plaidml_setup:main
