[metadata]
description = PlaidML machine learning accelerator
long_description = PlaidML is a framework for making machine learning work everywhere.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Software Development
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: POSIX :: Linux
  Programming Language :: C++
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5

[options]
packages = plaidml
zip_safe = false
include_package_data = true
install_requires = 
  enum34>=1.1.6
  jinja2
  numpy
  pyyaml
  six

[options.data_files]
{BIN_DATA_FILES}
share/plaidml =
  data/config.json
  data/experimental.json
  data/plaidml-config.cmake
include =
  data/half.hpp
include/plaidml =
  data/plaidml.h
  data/plaidml++.h
include/plaidml/base =
  data/base.h
  data/base_cpp.h

[bdist_wheel]
universal = 1

[options.package_data]
plaidml = *LICENSE*

[options.entry_points]
console_scripts =
  plaidml-setup = plaidml.plaidml_setup:main
  pmlc = plaidml.pmlc:main
