[metadata]
description = PlaidML Keras backend implementation.
long_description = PlaidML-Keras implements a Keras backend using PlaidML.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = Other/Proprietary
keywords = development ml keras
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development
	License :: Other/Proprietary License
  Programming Language :: Python :: 2.7

[options]
packages = plaidml/keras
install_requires =
  plaidml
  keras==2.0.8
