[metadata]
description = PlaidML Keras backend implementation.
long_description = PlaidML-Keras implements a Keras backend using PlaidML.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml keras
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development
  License :: OSI Approved
  Programming Language :: Python :: 2.7

[options]
packages = plaidml/keras
install_requires =
  plaidml
  keras==2.0.8
  future

[bdist_wheel]
universal = 1