[metadata]
description = PlaidML Keras backend implementation.
long_description = PlaidML-Keras implements a Keras backend using PlaidML.
url = http://vertex.ai
version = attr: plaidml_keras.__version__
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml keras
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Software Development
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: POSIX :: Linux
  Programming Language :: C++
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5

[options]
packages = plaidml/keras
install_requires =
  plaidml
  keras==2.2.2
  six

[bdist_wheel]
universal = 1
