add_subdirectory(lib)

set(_SRCS ffi.cc)
set(_HDRS
  ffi.h
  op.h
)

pml_cc_library(
  NAME op
  TYPE STATIC
  HDRS ${_HDRS}
  SRCS ${_SRCS}
  DEPS
    plaidml::core
    plaidml::edsl
    plaidml::op::lib
    pmlc::util
    LLVMSupport
)

pml_cc_library(
  NAME obj
  TYPE OBJECT
  HDRS ${_HDRS}
  SRCS ${_SRCS}
  DEPS
    plaidml::core::obj
    plaidml::edsl::obj
    plaidml::op::lib::obj
    pmlc::util
    LLVMSupport
)
